# waveline

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: PUBLISHING.md  launch-copy.md
docs/research/: findings-raw.json  streaming-resolution.md
docs/superpowers/specs/: 2026-06-22-waveline-design.md
npm/: README.md  package.json
packaging/aur/: PKGBUILD
src/: app.rs  b64.rs  config.rs  http.rs  main.rs  model.rs  mpris.rs  theme.rs  ui.rs
src/audio/: mod.rs  player.rs  sink.rs  source.rs  spectrum.rs
src/providers/: hls.rs  mixcloud.rs  mod.rs  soundcloud.rs
